--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
-}
+* { padding: 0;
+     margin: 0; 
+     box-sizing: border-box; 
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+} 
+body 
+{ background: #f5f9eb;
+     height: 100vh;
+      display: flex;
+       justify-content: center;
+        align-items: center; 
+    } 
+    .container
+     { background: #fcfff3;
+         padding: 50px;
+         max-width: 90%; /* Limited maximum width for responsiveness */
+         width: 400px; /* Set a default width */
+         max-height: 80vh; /* Added max-height to limit expansion */
+         overflow-y: auto;
+         display: flex; /* Use flexbox to align items vertically */
+         flex-direction: column; /* Align items vertically */
+         align-items: center; /* Center items horizontally */
+        
+         }
+          input
+           { padding: 10px;
+             border: none; 
+             outline: none;
+              background: #f5f9eb;
+               width: 200px;
+               margin-bottom: 5px; 
+            }
+             button 
+             { border-radius: 100px;
+                 background: #454545;
+                  padding: 5px 10px; 
+                  outline: none;
+                   border: none; 
+                   color: #fff; 
+                   margin-top: 10px;
+                   cursor: pointer; 
+                } 
+                .todos-list 
+                { margin-top: 3rem;
+                
+                } 
+                .todo
+                 { list-style:none;
+                     display: flex; 
+                     justify-content: space-between;
+                      align-items: center; 
+                      background: #f5f9eb;
+                       padding: 7px 20px;
+                        margin: 10px; 
+                        font-family: sans-serif;
+                        font-size: 1rem;
+                     } 
+                     .close 
+                     { padding: 5px 10px;
+                         cursor: pointer;
+                         background-color: rgb(255, 79, 79);
+                         color:white;
+                         margin:3px
+                         }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+                         .todo-text{
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+                            font-size: 5rem;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+                         }
